Kubernetes/Map_Examples_yml_files/deployments.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres  
  namespace: airflow
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
      - args:
        - postgres
        image: us.icr.io/mip-prod-namespace/postgres:latest
        imagePullPolicy: Always
        name: postgres
        lifecycle:
          preStop:
            exec:
              command: ["/home/postgres/backup.sh"]
        volumeMounts:
        - mountPath: /db_backup
          name: pgdata
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      volumes:
      - name: pgdata
        persistentVolumeClaim:
          claimName: postgres-data
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: airflow-webserver
  labels:
    app: airflow-webserver
  namespace: airflow
spec:
  replicas: 1
  selector:
    matchLabels:
      app: airflow-webserver
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: airflow-webserver
    spec:
      containers:
      - args:
        - afp-web
        image: us.icr.io/mip-prod-namespace/airflow:latest
        imagePullPolicy: Always
        name: airflow-webserver
        volumeMounts:
        - mountPath: /opt/airflow/logs
          name: air-logs
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      volumes:
      - name: air-logs
        persistentVolumeClaim:
          claimName: airflow-logs
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: airflow-scheduler 
  namespace: airflow
spec:
  replicas: 1
  selector:
    matchLabels:
      app: airflow-scheduler
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: airflow-scheduler
    spec:
      containers:
      - args:
        - afp-sched
        image: us.icr.io/mip-prod-namespace/airflow:latest
        imagePullPolicy: Always
        name: airflow-scheduler
        volumeMounts:
        - mountPath: /opt/airflow/logs
          name: air-logs 
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      volumes:
      - name: air-logs
        persistentVolumeClaim:
          claimName: airflow-logs
